# pos4

./: README.md  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/customers/: loading.tsx  page.tsx
app/dashboard/: page.tsx
app/inventory/: loading.tsx  page.tsx
app/pos/: page.tsx
app/products/: loading.tsx  page.tsx
app/products/new/: page.tsx
app/sales/: page.tsx
app/settings/: loading.tsx  page.tsx
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  database.rs  main.rs
backend/src/handlers/: auth.rs  inventory.rs  mod.rs  products.rs  sales.rs  users.rs
backend/src/middleware/: auth.rs  cors.rs
backend/src/models/: customer.rs  mod.rs  product.rs  sale.rs  stock_movement.rs  user.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  validation.rs
components/: admin-layout.tsx  dashboard-skeleton.tsx  loading-spinner.tsx  login-form.tsx  payment-modal.tsx  permission-guard.tsx  pos-layout.tsx  product-form.tsx  product-search.tsx  sales-chart.tsx  sales-summary-cards.tsx  sales-transactions-table.tsx  shopping-cart.tsx  stock-adjustment-modal.tsx  stock-movement-history.tsx  table-skeleton.tsx  user-management-modal.tsx
lib/: api.ts  auth-context.tsx  data-store.tsx
types/: index.ts
